src/components/Home/Home.css
@media screen and (min-width: 300px) {
  .home-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 10px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 1rem;
    font-size: 1.25rem;
    font-weight: 900;
    text-align: left;
    color: white;
    animation: fadeIn 10s;
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  .img-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .group-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .group-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .intro-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    margin-top: 10px;
    background: rgb(1, 70, 56);
  }

  .clt-bio {
    font-size: 1rem;
    font-size: 1.25rem;
    font-weight: 900;
    text-align: left;
    color: white;
  }
}

@media screen and (min-width: 400px) {
  .home-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 10px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 1.25rem;
    color: white;
    animation: fadeIn 10s;
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  .img-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
    /* max-width: 392px; */
  }

  .group-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .group-img {
    max-width: 100%;
  }
}

@media screen and (min-width: 576px) {
  .home-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 1.25rem;
    color: white;
  }

  .img-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .group-sec {
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .group-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .intro-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
    background: rgb(1, 70, 56);
  }
}

@media screen and (min-width: 768px) {
  .home-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 1.25rem;
    color: white;
  }

  .img-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .group-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    background: rgb(1, 70, 56);
  }
  .group-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .clt-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .clt-bio {
    font-size: 1.2rem;
    text-align: left;
    color: white;
  }

  .intro-sec {
    display: flex;
    flex-direction: row;
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media screen and (min-width: 992px) {
  .home-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 1.25rem;
    text-align: center;
    color: white;
  }

  .img-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .group-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .group-img {
    width: 100%;
    border-radius: 125px;
  }

  .clt-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    /* padding-left: 20px;
    padding-right: 20px; */
    background: rgb(1, 70, 56);
  }

  .clt-bio {
    font-size: 1.25rem;
    color: white;
    text-align: left;
  }

  .intro-sec {
    display: flex;
    flex-direction: row;
  }
}

@media screen and (min-width: 1200px) {
  .home {
    display: flex;
    flex-direction: row;
  }

  .home-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .message {
    font-size: 2.25rem;
    font-weight: 900;
    color: white;
    animation: fadeIn 10s;
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  .img-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    /* background: rgb(1, 70, 56); */
  }

  .com-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .group-img {
    max-width: 100%;
    border-radius: 125px;
  }

  .intro-sec {
    /* display: flex;
    flex-direction: row;
    margin: 1.25rem;
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px; */
    display: flex;
    flex-direction: row;
  }

  .clt-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    background: rgb(1, 70, 56);
  }

  .clt-bio {
    font-size: 1rem;
    font-size: 1.5rem;
    font-weight: 600;
    text-align: left;
    color: white;
  }

  .group-sec {
    /* margin: 1.25rem; */
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    background: rgb(1, 70, 56);
  }
}

